# Ir-MA

./: CMakeLists.txt  ball_query_kd.h  ball_query_tree.h  common.h  compare_test.py  gather_points.h  grouping.h  prof.py  sampling.cpp  sampling.h  test_pnt2_onnx.cpp
MA-code/: ReadMe.md
MA-code/convert_to_onnx_pnt2/: ReadMe.md  convert.py  data_utils.py  pnt2_cls_ssg.py  pnt2_data.py  pnt2_tr.py  pointnet2_modules.py  pointnet2_utils.py
MA-code/convert_to_onnx_pnt2/pnt2_ops/: ReadMe.md
MA-code/convert_to_onnx_pnt2/pnt2_ops/_ext-src/: setup.py
MA-code/convert_to_onnx_pnt2/pnt2_ops/_ext-src/src/: bindings.cpp
MA-code/onnxruntime_inference/: CMakeLists.txt  ReadMe.md  ball_query.h  ball_query_kd.h  ball_query_tree.h  common.h  compare_test.py  gather_points.h  grouping.h  prof.py  sampling.h  test_pnt2_onnx.cpp
MA-code/onnxruntime_inference/kd_tree/: ReadMe.md  ball_query_third_kd.h
MA-code/onnxruntime_inference/oct_tree/: CMakeLists.txt  ReadMe.md  test_oct_tree.cpp
MA-code/onnxruntime_inference/oct_tree/include/: oct_tree.h
MA-code/pnt2_cpu/: ReadMe.md  net.py  speed_test.py
MA-code/pnt2_cpu/pointnet2_ops/: ReadMe.md  __init__.py  pointnet2_modules.py  pointnet2_utils.py  setup.py
MA-code/pnt2_cpu/pointnet2_ops/_ext_src/src/: ball_query.cpp  group_points.cpp  sampling.cpp
MA-code/quantization/: ReadMe.md  quantize.py
MA-code/quantization/for_py_ops/: CMakeLists.txt  ReadMe.md  ball_query.cpp  ball_query.h  common.h  gather_points.cpp  gather_points.h  grouping.cpp  grouping.h  register.cpp  register.h  sampling.cpp  sampling.h
MA-code/registry_custom_ops_onnxruntime_example/: CMakeLists.txt  ReadMe.md  test_custom_fps_onnx.cpp  test_custom_fps_onnx.h  testmodel.onnx
MA-code/torchscript_example/pointnet_model/: CMakeLists.txt  ReadMe.md  test_dataload.cpp  to_onnx.py  to_script.py  try_script.cpp
MA-code/torchscript_example/registry_custom_ops_torchscript/: ReadMe.md  setup.py  test.py  try_custom_fps.cpp
custom_test/: CMakeLists.txt  test_custom.cpp  test_custom.py
custom_test/include/: ball_query.h  common.h  gather_points.h  grouping.h
pnt2-py/: pnt2_cls_ssg.py  pnt2_data.py  pnt2_tr.py  pointnet2_modules.py  pointnet2_utils.py  test.py  test1.py  test2.py
pnt2-py/pnt2_ops/_ext-src/include/: sampling.h
pnt2-py/pnt2_ops/_ext-src/src/: ball_query.cpp  bindings.cpp  sampling.cpp
pnt2_ops/_ext-src/: setup.py
pnt2_ops/_ext-src/src/: group_points.cpp
